--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -61,7 +61,7 @@
     min-width: 290px;
     margin-top: 0;
     margin-bottom: 40px;
-    margin-left: 4px;
+    margin-left: 3.9%;
     font-size: 24px;
     line-height: 39px;
 
